--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -8,6 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    
 }
 
 .item {
@@ -62,6 +63,7 @@
   
   .cart{
       position: relative;
+      cursor: pointer;
   }
 
   .counter {
